[package]
name = "view"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { path = "../pdf" }
pathfinder_geometry = { path = "../../pathfinder/geometry" }
pathfinder_canvas = { path = "../../pathfinder/canvas" }
pathfinder_renderer = { path = "../../pathfinder/renderer" }
