[package]
name = "view"
version = "0.1.0"
authors = ["Sebastian Köln <sebk@rynx.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { path = "../pdf" }
pathfinder_geometry = { path = "../../pathfinder/geometry" }
pathfinder_content = { path = "../../pathfinder/content" }
pathfinder_canvas = { path = "../../pathfinder/canvas" }
pathfinder_renderer = { path = "../../pathfinder/renderer" }
pathfinder_gl = { path = "../../pathfinder/gl" }
pathfinder_gpu = { path = "../../pathfinder/gpu" }
pathfinder_export = { path = "../../pathfinder/export" }
euclid = "0.19"
log = "*"
env_logger = "*"
font-kit = { path = "../../font-kit" }
gl = "0.6"
sdl2 = "0.32"
sdl2-sys = "0.32"

[dependencies.skribo]
path = "../../skribo"
